# BillBot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  billbot.go  go.mod  go.sum
.github/workflows/: docker-build.yml  ssh-deploy.yml
cmd/BillBot/: config.go  main.go
discord/: client.go
formats/: rogers.go  testParser.go
gmail/: client.go
mock/: billReceiver.go  billSender.go
publisher/: generic.go  generic_test.go
receiver/: gmail.go
redis/: client.go
sender/: discord.go
session/: discordgo.go
src/: handler.rs  main.rs
src/commands/: create_bill.rs  help.rs  mod.rs
subscriber/: generic.go  generic_test.go
