[package]
name = "billbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
env_logger = "0.9.1"
log = "0.4.17"
rust_decimal = "1.26.1"
rusty-money = "0.4.1"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "utils", "cache"] }
tokio = { version = "1.24.2", features = ["full"] }
